orgware finish ob-babel-execute-closest-src-block
it is now bound to f5 in the familiar config it is fairly nice to use

rename ow-babel-eval to ow-babel-execute-src-block for terminological
consistency with upstream, should use the new alias ob-babel-exec

add ow-find-file-new-process to enabel ./file.org visit functionality

--- a/orgware.org
+++ b/orgware.org
@@ -262,7 +262,8 @@ NOTE: `undo-fu' is required for Emacs < 28."
     (when (fboundp #'undo-redo)
       (if (eq system-type 'darwin)
           (funcall set-key (kbd "C-Z") #'undo-redo)
-        (funcall set-key (kbd "C-y") #'undo-redo))))
+        (funcall set-key (kbd "C-y") #'undo-redo)))
+    (funcall set-key (kbd "<f5>") #'ow-babel-execute-closest-src-block))
 
   ;; Move text smoothly when point is at top or bottom of buffer
   (ow--setq global scroll-conservatively 101)
@@ -980,6 +981,25 @@ come before rest when calling a cl-defun."
 (when (< emacs-major-version 25)
   (defalias 'ow-run-command-async #'ow-run-command-async-24))
 
+(defun ow-call-process (command &rest args)
+  "`call-process' and do not wait, fork it an let it be freeeee!"
+  (apply #'call-process command nil 0 nil args))
+
+(defun ow-find-file-new-process (file)
+  "`find-file' in a separate Emacs process.
+
+`user-emacs-directory' and `user-init-file' are passed
+to the new process if they are non-nil, otherwise default
+values are provided."
+  (apply
+   #'ow-call-process
+   `(,(expand-file-name (invocation-name) (invocation-directory))
+     ,@(when user-emacs-directory
+         `("-eval" "(setq user-emacs-directory (pop argv))" ,user-emacs-directory))
+     ,@(if user-init-file
+           `("-eval" "(progn (setq user-init-file (pop argv)) (load user-init-file))" ,user-init-file)
+         '("-q"))
+     "-visit" ,file)))
 #+end_src
 ** cli and orthauth
 # see also [[file:~/git/git-share/README.org::parse-args-cli][git-share parse args]]
@@ -1288,7 +1308,7 @@ All errors are silenced."
         result
       (apply fun args))))
 
-(defun ow-babel-eval (block-name &optional universal-argument error-on-fail)
+(defun ow-babel-execute-src-block (block-name &optional universal-argument error-on-fail)
   "Use to confirm running a chain of dependent blocks starting with BLOCK-NAME.
 This retains single confirmation at the entry point for the block.
 If ERROR-ON-FAIL is non-nil then an error will be raised by overriding
@@ -1319,30 +1339,63 @@ If ERROR-ON-FAIL is non-nil then an error will be raised by overriding
                 (org-babel-execute-src-block)))
           (advice-remove #'org-babel-insert-result #'ow--results-silent))))))
 
-(defun ow-babel-eval-closest-block (&optional universal-argument)
-  "WARNING this function is broken right now."
+(defalias 'ow-babel-exec #'ow-babel-execute-src-block)
+(define-obsolete-function-alias
+  'ow-babel-eval #'ow-babel-execute-src-block "29.1"
+"Support for orgstrap blocks that have not updated.
+Better to use `ow-babel-exec' alias to match terminology.")
+
+(defun ow-babel-execute-closest-src-block (&optional universal-argument)
+  "Execute the block that is closest to the cursor line.
+
+If `org-element-at-point' is a src-block run that block.
+
+Distance is `count-lines' between `point' and the end of the
+previous block and `point' and the beginning of the next block.
+
+If the distance is equal run the next block."
   (interactive "P")
-  ;; FIXME should the distance be determined by start or end ? or what?
-  ;; I think start for next and end for prev
-  ;; FIXME also ... lines are likely to be significantly more important
-  ;; FIXME also if we are inside a src block ... just run that one
   ;; FIXME also whether one of the blocks is visible
-  (org-element-at-point)
-  (let ((here (point))
-        (prev-end (save-excursion
-                    (org-babel-previous-src-block)
-                    (+ (point) (nth 5 (org-babel-get-src-block-info)))))
-        (next-beg (save-excursion
-                    (org-babel-next-src-block)
-                    (point))))
-    (let ((dp (count-lines prev-end here))
-          (dn (count-lines here next-start)))
-      (save-excursion
-        (goto-char
-         (if (> dp dn)
-             next-beg
-           prev-end))
-        (org-babel-execute-src-block)))))
+  ;; FIXME also whether we cross a heading ...
+  (let ((elem (save-excursion
+                (forward-char) ; issues with line after block counting as block
+                (org-element-at-point))))
+    (if (eq (org-element-type elem) 'src-block)
+        (save-excursion
+          (goto-char (cl-getf (nth 1 elem) :begin))
+          (org-babel-execute-src-block))
+      (let ((here (point))
+            (prev-beg-end
+             (save-excursion
+               (condition-case nil
+                   (progn
+                     (org-babel-previous-src-block)
+                     (let ((e (nth 1 (org-element-at-point))))
+                       (cons (cl-getf e :begin)
+                             (cl-getf e :end))))
+                 (user-error nil))))
+            (next-beg
+             (save-excursion
+               (condition-case nil
+                   (progn
+                     (org-babel-next-src-block)
+                     (point))
+                 (user-error nil)))))
+        (let ((dist-prev (and prev-beg-end (count-lines (1- (cdr prev-beg-end)) here)))
+              (dist-next (and next-beg (count-lines here (1- next-beg)))))
+          (if (or dist-prev dist-next)
+              (save-excursion
+                (goto-char
+                 (cond
+                  ((and dist-prev dist-next)
+                   (if (>= dist-prev dist-next)
+                       next-beg ; next gets priority if line dist is equal
+                     (car prev-beg-end)))
+                  (dist-next next-beg)
+                  (dist-prev (car prev-beg-end))))
+                (message "%s" (point))
+                (org-babel-execute-src-block))
+            (user-error "Could not find any source blocks to run.")))))))
 #+end_src
 
 * Emacs sandbox
